# QtTesting

./: README.md
LogicQt/Dataset/: Emoji.txt
LogicQt/LogicQt/: .ninja_deps  .ninja_log  Build.cpp  Build.h  CMakeCache.txt  CMakeLists.txt  Definition.cpp  Definition.h  Game.cpp  Game.h  Global.cpp  Global.h  Lists.cpp  Lists.h  Trie.cpp  Trie.h  VietNamese.cpp  VietNamese.h  Word.cpp  Word.h  build.ninja  cmake_install.cmake  main.cpp  qtcsettings.cmake
LogicQt/LogicQt/.cmake/api/v1/reply/: cache-v2-22f4c158f39a4a84b244.json  cmakeFiles-v1-9dca089951bec74054a2.json  codemodel-v2-c1be4390e6c512d029fd.json  index-2024-08-13T16-48-03-0352.json  target-LogicQt-Debug-899bff9b55866fd7a934.json  target-LogicQt_autogen-Debug-e4868671b3f3859ada4d.json  target-LogicQt_autogen_timestamp_deps-Debug-2086a345f6859a1280d1.json
LogicQt/LogicQt/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
LogicQt/LogicQt/Dataset/: Slang.txt  Vie_Eng.txt
LogicQt/LogicQt/LogicQt_autogen/: deps
LogicQt/story/Emoji/: Emoji.txt
LogicQt/story/English-English/: Eng_Eng.txt
LogicQt/story/English-Vietnamese/: Eng_Vie.txt
LogicQt/story/Slang/: Slang.txt
LogicQt/story/Vietnamese-English/: Vie_Eng.txt
